--- a/public/js/directives/navbar/navbar.html
+++ b/public/js/directives/navbar/navbar.html
@@ -4,7 +4,7 @@
             aria-controls="navbarsExampleContainer" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">MEAN App</a>
+        <a class="navbar-brand" href="#">Task List</a>
 
         <div class="collapse navbar-collapse" id="navbarsExampleContainer">
             <ul class="navbar-nav ml-auto">
