revamped homepage, updated about page, renamed site

--- a/public/js/directives/navbar/navbar.html
+++ b/public/js/directives/navbar/navbar.html
@@ -4,7 +4,10 @@
             aria-controls="navbarsExampleContainer" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Task List</a>
+        <a class="navbar-brand" href="#">
+            <i class="fa fa-thumb-tack"></i> &nbsp;&nbsp;
+            Rastogi's Task List
+        </a>
 
         <div class="collapse navbar-collapse" id="navbarsExampleContainer">
             <ul class="navbar-nav ml-auto">
