--- a/public/js/directives/tasks/tasks.html
+++ b/public/js/directives/tasks/tasks.html
@@ -1,22 +1,50 @@
+<style>
+    .grey {
+        color: #999!important;
+    }
+
+    .card {
+        transition: 0.2s;
+        border-radius: 6px;
+    }
+
+    .card:hover {
+        box-shadow: 0 4px 8px 4px rgba(0,0,0,0.1);
+    }
+
+    input[ng-model="title"] {
+        display: block!important;
+        margin: 0 auto;
+        width: 75%;
+        border: none;
+        border-radius: 50px;
+        padding-left: 20px;
+        padding-top: 8px;
+        box-shadow: 0 1px 2px 0 rgba(60,64,67,0.302), 0 2px 4px 2px rgba(60,64,67,0.149), 0 3px 5px rgba(0,0,0,0.20);
+        height: 36px;
+        resize: none;
+    }
+</style>
 <div class="container my-3">
-    <form class="card-block" ng-submit="addTask($event)">
+    <form class="m-5" ng-submit="addTask($event)">
         <div class="form-group">
-            <input type="text" ng-model="title" class="form-control" placeholder="Add Task..">
+            <input type="text" ng-model="title" class="form-control" placeholder="Add an item...">
+            <!-- <textarea placeholder="Add an item..." ng-model="title" cols=" 30" rows="10"></textarea> -->
         </div>
     </form>
     <div class="alert alert-success" ng-show="taskAdded">Task Added Successfully!</div>
-    <div class="card task-list mt-3">
-        <div class="card-block">
-            <div class="row my-1" ng-repeat="task in tasks">
+    <div class="task-list mt-3">
+        <div class="card my-2" ng-repeat="task in tasks">
+            <div class="card-block row">
                 <div class="col-sm-1">
-                    <input type="checkbox" ng-checked="task.isDone" ng-click="updateStatus(task)">
+                    <input type="checkbox" style="width:40px; height:40px;" ng-checked="task.isDone" ng-click="updateStatus(task)">
                 </div>
-                <div class="col-sm-7">{{task.title}}</div>
-                <div class="col-sm-4">
+                <div class="col-sm-10" ng-class="{grey: task.isDone}" style="padding-top:4px;">{{task.title}}</div>
+                <div class="col-sm-1">
                     <button class="btn btn-outline-danger" ng-click="deleteTask(task._id)"><i class="fa fa-trash-o"></i></button>
                 </div>
             </div>
-            <div class="alert alert-success" ng-show="taskDeleted">Task Deleted Successfully!</div>  
-        </div>      
+        </div>
+        <div class="alert alert-success" ng-show="taskDeleted">Task Deleted Successfully!</div>
     </div>
 </div>
