--- a/public/js/directives/tasks/tasks.html
+++ b/public/js/directives/tasks/tasks.html
@@ -1,6 +1,6 @@
 <style>
     .grey {
-        color: #999!important;
+        color: #999 !important;
     }
 
     .card {
@@ -9,20 +9,34 @@
     }
 
     .card:hover {
-        box-shadow: 0 4px 8px 4px rgba(0,0,0,0.1);
+        box-shadow: 0 4px 8px 4px rgba(0, 0, 0, 0.1);
     }
 
     input[ng-model="title"] {
-        display: block!important;
+        display: block !important;
         margin: 0 auto;
         width: 75%;
         border: none;
         border-radius: 50px;
         padding-left: 20px;
         padding-top: 8px;
-        box-shadow: 0 1px 2px 0 rgba(60,64,67,0.302), 0 2px 4px 2px rgba(60,64,67,0.149), 0 3px 5px rgba(0,0,0,0.20);
+        box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 4px 2px rgba(60, 64, 67, 0.149), 0 3px 5px rgba(0, 0, 0, 0.20);
         height: 36px;
         resize: none;
+    }
+
+    .floating-card {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        height: 50px;
+        z-index: 10;
+        width: 200px;
+        text-align: center;
+    }
+
+    .hide-delete {
+        visibility: hidden;
     }
 </style>
 <div class="container my-3">
@@ -33,16 +47,27 @@
         </div>
     </form>
     <div class="alert alert-success" ng-show="taskAdded">Task Added Successfully!</div>
-    <div class="alert alert-warning" ng-show="taskDeleted">Task Deleted Successfully!</div>
+    <div class="alert alert-warning floating-card" ng-show="taskDeleted">
+        Task Deleted!
+    </div>
+    <div class="alert alert-danger floating-card"
+        style="height: 60px; opacity: 0.8;" ng-show="undoDelete">
+        <button style="border:none; padding: 6px 20px;" class="badge badge-pill badge-danger"
+            ng-click="undoDeleteTask()">
+            Undo Delete ({{deleteTimerTime}})
+        </button>
+    </div>
     <div class="task-list mt-3">
         <div class="card my-2" ng-repeat="task in tasks">
             <div class="card-block row">
                 <div class="col-sm-1">
-                    <input type="checkbox" style="transform: scale(2); margin: 10px;" ng-checked="task.isDone" ng-click="updateStatus(task)">
+                    <input type="checkbox" style="transform: scale(2); margin: 10px;" ng-checked="task.isDone"
+                        ng-click="updateStatus(task)">
                 </div>
-                <div class="col-sm-10" ng-class="{grey: task.isDone}" style="padding-top:4px;">{{task.title}}</div>
-                <div class="col-sm-1">
-                    <button class="btn btn-outline-danger" ng-click="deleteTask(task._id)"><i class="fa fa-trash-o"></i></button>
+                <div class="col-sm-10" ng-class="{'grey': task.isDone}" style="padding-top:4px;">{{task.title}}</div>
+                <div class="col-sm-1" ng-class="{'hide-delete': hideAllDeleteButtons}">
+                    <button class="btn btn-outline-danger" ng-click="deleteTask(task._id)"><i
+                            class="fa fa-trash-o"></i></button>
                 </div>
             </div>
         </div>
